@@ -170,6 +170,7 @@ typedef struct {
   STRLEN incr_pos; /* the current offset into the text */
   int incr_nest;   /* {[]}-nesting level */
   unsigned char incr_mode;
+  unsigned char infnan_mode;
 } JSON;
 
 INLINE void
@@ -982,15 +983,19 @@ encode_sv (pTHX_ enc_t *enc, SV *sv)
                || strEQ(enc->cur+1, STR_QNAN)
 #endif
                ))) {
-#ifdef STRINGIFY_INFNAN
-        const int l = strlen(enc->cur);
-        memmove(enc->cur+1, enc->cur, l);
-        *enc->cur = '"';
-        *(enc->cur + l+1) = '"';
-        *(enc->cur + l+2) = 0;
-#else
-        strncpy(enc->cur, "null\0", 5);
-#endif
+        if (enc->json.infnan_mode == 0) {
+          strncpy(enc->cur, "null\0", 5);
+        }
+        else if (enc->json.infnan_mode == 1) {
+          const int l = strlen(enc->cur);
+          memmove(enc->cur+1, enc->cur, l);
+          *enc->cur = '"';
+          *(enc->cur + l+1) = '"';
+          *(enc->cur + l+2) = 0;
+        }
+        else if (enc->json.infnan_mode != 2) {
+          croak ("invalid stringify_infnan mode %d. Must be 0, 1 or 2", enc->json.infnan_mode);
+        }
       }
       if (SvPOKp (sv) && !strEQ(enc->cur, SvPVX (sv))) {
         STRLEN len;
@@ -2825,13 +2830,19 @@ int get_max_size (JSON *self)
 	OUTPUT:
         RETVAL
 
-void get_stringify_infnan (SV *self)
+void stringify_infnan (JSON *self, IV infnan_mode = 1)
 	PPCODE:
-#ifdef STRINGIFY_INFNAN
-        XPUSHs (boolSV (1));
-#else
-        XPUSHs (boolSV (0));
-#endif
+        self->infnan_mode = (unsigned char)infnan_mode;
+        if (self->infnan_mode < 0 || self->infnan_mode > 2) {
+          croak ("invalid stringify_infnan mode %d. Must be 0, 1 or 2", infnan_mode);
+        }
+        XPUSHs (ST (0));
+        
+int get_stringify_infnan (JSON *self)
+	CODE:
+        RETVAL = (int)self->infnan_mode;
+	OUTPUT:
+        RETVAL
         
 void filter_json_object (JSON *self, SV *cb = &PL_sv_undef)
 	PPCODE:
